...
                    VStack(spacing: 12) {
                        Image(systemName: "star")
                            .font(.largeTitle)
                            .foregroundColor(.gray)
                        Text("No favourites yet")
                            .font(.headline)
                            .accessibilityIdentifier("noFavouritesText")
                        Text("Mark a cat as favourite to view it here.")
                            .font(.subheadline)
                            .foregroundColor(.gray)
                    }
                    .padding(.top, 100)
                    .frame(maxWidth: .infinity)
...
                    viewModel.currentTab = .list
                }
                Spacer()
                Spacer()
                Text("Favourites")
                    .fontWeight(.bold)
                    .accessibilityIdentifier("favouritesTab") //Identifier for tests
                Spacer()
            }
            .padding()
            .background(Color.black)
            .foregroundColor(.white)
        }
...
